tempfile/derive_more/tests/compile_fail/is_variant/must_use.rs
#[derive(derive_more::IsVariant)]
enum MustUse {
    Yes,
}

#[forbid(unused_must_use)]
fn main() {
    let must_use = MustUse::Yes;
    must_use.is_yes();
}
